sumo/tests/sumo/output/meandata_lanebased/errors/missing_begin2/options.sumo
--no-duration-log --net-file=net.net.xml --routes=input_routes.rou.xml --lanedump-basename=aggregated --lanedump-intervals="15,60,300,900" -b 0 -e 10000 --dump-begins 900 --dump-ends "119,1019"

